# ghost

./: README.md  meson.build
data/: com.github.matej-marcisovsky.ghost.appdata.xml.in  com.github.matej-marcisovsky.ghost.desktop.in  com.github.matej-marcisovsky.ghost.pkexec.policy.in
po/: POTFILES  com.github.matej-marcisovsky.ghost.pot  cs.po
src/: Application-pkexec.vala  Application.vala  Ghost.vala  Host.vala  Hosts.vala  MainWindow.vala
src/Widgets/: HeaderBar.vala  MainWindow.vala
